--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <title></title>
 </head>
 <body>
+  <article>
+        Have an ac
+        <div></div>
+        count? <
+            a href="/login">Log In</a>
+  </article>
 </body>
 </html>
