email verified for authentication

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <title></title>
 </head>
 <body>
-  <article>
-        Have an ac
-        <div></div>
-        count? <
-            a href="/login">Log In</a>
-  </article>
+  <form action="/verify-email" method="post">
+      <input type="submit" value="Resend">
+  </form>
 </body>
 </html>
